fix home width on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -66,7 +66,7 @@
         display: none;
     }
     .jumbotron a {
-        margin: 0 50%;
+        margin: 0 0 0 50%;
         transform: translateX(-50%);
         min-width: 180px;
     }
